--- a/templates/index.html
+++ b/templates/index.html
@@ -156,13 +156,14 @@
 <div class="comic-box">
     <h1>Interactive Comic Reader</h1>
     <img id="comic-image" class="comic-image" src="static/comics/1.jpg" alt="Comic">
+    <div class="page-info">
+        Page <span id="current-page">1</span> of <span id="total-pages">4</span>
+    </div>
     <div class="page-progress-bar">
         <div id="page-progress" class="page-progress"></div>
     </div>
 
-    <div class="page-info">
-        Page <span id="current-page">1</span> of <span id="total-pages">4</span>
-    </div>
+  
 
     <div class="progress-container">
         <button class="nav-button prev-button" onclick="prevComic()">
@@ -188,8 +189,16 @@
 
 
 
+
+
     <div class="instructions">
         <span>Press Space to Play/Pause, Arrow Keys to Navigate</span>
+    </div>
+
+    <div class="jump-to-page">
+        <label for="jump-to-page-input">Jump to Page:</label>
+        <input type="number" id="jump-to-page-input" min="1" max="4" value="1">
+        <button onclick="jumpToPage()">Go</button>
     </div>
 </div>
 
@@ -212,7 +221,6 @@
             audioQueue = comic.dialogues.map(dialogue => dialogue.audio);
             currentIndex = index;
             stopAudio();
-            playAudioQueue();
 
             // Update page progress
             updatePageProgress(index);
@@ -230,6 +238,7 @@
 
             stopAudio();
             currentAudio = new Audio(audioQueue[index]);
+            currentAudio.muted = false; // Ensure audio is unmuted when playing
             updateProgress(0);
 
             currentAudio.onloadedmetadata = () => {
@@ -264,6 +273,7 @@
         if (currentAudio) {
             currentAudio.pause();
             currentAudio.currentTime = 0;
+            currentAudio.muted = true; // Mute the audio when stopping
             currentAudio = null;
         }
         if (animationFrameId) {
