added arab language

--- a/templates/index.html
+++ b/templates/index.html
@@ -179,7 +179,7 @@
 </head>
 <body>
 <div class="comic-box">
-<h1 style="margin:5px"> AI Comic Reader </h1>
+<h1 style="margin:5px">Comic Reader </h1>
     <div class="language-selector-container" style="margin:0"> 
         <label for="language">Select Language:</label>
         <select id="language" onchange="reloadComic()">
