--- a/templates/index.html
+++ b/templates/index.html
@@ -93,6 +93,18 @@
             font-size: 14px;
             color: #555;
         }
+        .progress-circle {
+            position: absolute;
+            top: -5px;
+            left: -5px;
+            width: 70px;
+            height: 70px;
+            stroke: #007BFF;
+            stroke-width: 8;
+            fill: none;
+            transition: stroke-dashoffset 0.1s linear;
+        }
+
         .instructions {
             margin-top: 10px;
             font-size: 14px;
@@ -125,7 +137,6 @@
             appearance: none; /* Remove default arrow in some browsers */
             -webkit-appearance: none; /* For Safari */
             -moz-appearance: none; /* For Firefox */
-            background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23333'%3e%3cpath d='M7 10l5 5 5-5z'/%3e%3c/svg%3e"); /* Custom dropdown arrow */
             background-repeat: no-repeat;
             background-position: right 10px center;
             background-size: 12px;
@@ -192,13 +203,14 @@
 
     <div class="comic-div" style="margin:0">
         <img id="comic-image" class="comic-image" src="static/comics/1_en.jpg" alt="Comic">
+        <div class="page-progress-bar">
+            <div id="page-progress" class="page-progress"></div>
+        </div>
+        <div class="page-info">
+            Page <span id="current-page">1</span> of <span id="total-pages">4</span>
+        </div>
     </div>
-    <div class="page-progress-bar">
-        <div id="page-progress" class="page-progress"></div>
-    </div>
-    <div class="page-info">
-        Page <span id="current-page">1</span> of <span id="total-pages">4</span>
-    </div>
+
     <div class="progress-container">
         <button class="nav-button prev-button" onclick="prevComic()">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
@@ -208,6 +220,10 @@
         <button id="play-pause-button" class="play-pause-button" onclick="togglePlayPause()">
             <svg id="play-pause-icon" width="24" height="24" viewBox="0 0 24 24" fill="white">
                 <path d="M8 5.14v14l11-7-11-7z"></path>
+            </svg>
+            <svg class="progress-circle" viewBox="0 0 100 100">
+                <circle cx="50" cy="50" r="45" stroke="#ddd" stroke-width="10" fill="none" />
+                <circle id="progress" cx="50" cy="50" r="45" stroke-dasharray="283" stroke-dashoffset="283" />
             </svg>
         </button>
         <button class="nav-button next-button" onclick="nextComic()">
